[tool.poetry]
name = "ecg2af-webapp"
version = "0.1.0"
description = "A Streamlit web application for ECG-based AF risk prediction"
authors = ["Deeksha Doddahonnaiah <deeksha20194@gmail.com>"]
readme = "README.md"
packages = [{include = "ecg2af_webapp"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7"
streamlit = "1.39.0"
plotly = "5.24.1"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-app = "ecg2af_webapp.app:main"
